--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>This is my first Web Site using Python!!</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <table cellspacing="20">
@@ -27,7 +28,7 @@
     <hr size="3" noshade="">
         <table cellspacing="10">
             <thead>
-            <tr align="justify">
+            <tr>
                 <th><h3>Knowledge and Skills</h3></th>
             <th ><h3>Experience</h3></th>
             <th><h3>Level of mastering</h3></th>
@@ -37,26 +38,26 @@
             <tr>
                 <td>Java</td>
                 <td>4 years</td>
-                <td>⭐⭐⭐⭐⭐</td>
+                <td class="star">☀ ☀ ☀ ☀ ☀</td>
             </tr>
            <tr>
                 <td>SQL</td>
                 <td>4 years</td>
-                <td>⭐⭐⭐⭐⭐</td>
+               <td class="star">☀ ☀ ☀ ☀ ☀</td>
             </tr>
                 <tr>
                 <td>JPA</td>
                 <td>3.5 years</td>
-                <td>⭐⭐⭐⭐</td>
+                <td class="star">☀ ☀ ☀ ☀</td>
             </tr>
             <tr><td>Spring MVC</td>
                 <td>2 years</td>
-                <td>⭐⭐⭐⭐</td>
+                <td class="star">☀ ☀ ☀ ☀ </td>
             </tr>
             <tr>
                 <td>Spring Boot</td>
                 <td>1 year</td>
-                <td>⭐⭐⭐</td>
+                <td class="star">☀ ☀ ☀</td>
             </tr>
         </tbody>
         </table>
