--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>This is my first Web Site using Python!!</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/favicon_heart.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon_heart.ico">
 </head>
 <body>
 <table cellspacing="20">
