--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>This is my first Web Site using Python!!</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon_heart.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Courgette&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <table cellspacing="20">
