--- a/index.html
+++ b/index.html
@@ -2,77 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is my first Web Site using Python!!</title>
+    <title>Svitlana Hromivchuk</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon_heart.ico">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Courgette&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 
 </head>
 <body>
-<table cellspacing="20">
-    <tr>
-        <td><img src="img-modified.png" alt="Svit´s profile´s picture" ></td>
-        <td align="center">    <h1>❤️Svit❤️</h1>
-    <p><h2><strong>Java Software Engineer</strong></h2></p>
- </td>
-    </tr>
-</table>
 
-   <hr size="3" noshade="">
-   <h4><a href="contact-me.html">Contact Me</a> </h4>
+    <div class="top-container">
+        <div class="inner-container">
+            <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        </div>
+        <div class="inner-container">
+            <h1>I´m Svit</h1>
+            <h2 class="subtitle">an application developer</h2>
+        </div>
+        <img class="abs-image" src="images/cloud.png" alt="cloud-image">
+        <img class="mountain" src="images/mountain.png" alt="mountain-image">
+    </div>
+<div class="middle-container">
+  <div class="profile">
+    <img class="profile-img" src="images/img-modified.png" alt="profile-picture">
+    <h2>Hello.</h2>
+    <p class="skills2">I have always enjoyed solving problems and working things out and this is the reason for chosing software engineering as my career. I think that in order to do something really well you have to really like it.
+        I’m passionate about coding, new technologies and learning and implementing best practices.
+        In recent years I've specialized in back-end software development in Java and do my best to excel at it.
+        I prefer to work in multicultural Agile environments, where teamwork and personal growth are part of my day to day.
+    </p>
+  </div>
+  <hr>
+  <div class="skills2">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="img-skill" src="images/java.png" alt="java">
+      <h3>Lorem & Ipsum</h3>
+      <p class="p_skills">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    </div>
+    <div class="skill-row">
+      <img class="img-skill" src="images/computer.png" alt="java">
+      <h3>Lorem Ipsum Dolor</h3>
+      <p class="p_skills">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <br>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+ </div>
+</div>
 
-    <h3>Education and Training</h3>
-    <ul>
-        <li>Degree in Computer Science, <a href="https://in.tntu.edu.ua/"> Technical University of Ternopil</a></li>
-        <li>Degree in Mathematics, <a href="http://en.chnu.edu.ua/"> National University of Chernivtsi</a></li>
-        <li>Cerificate of professional training in Object Otrinted Programming and Relational Data Bases<a href="https://cursoshazerta.es"> Hazerta</a></li>
 
-    </ul>
-    <hr size="3" noshade="">
-        <table cellspacing="10">
-            <thead>
-            <tr>
-                <th><h3>Knowledge and Skills</h3></th>
-            <th ><h3>Experience</h3></th>
-            <th><h3>Level of mastering</h3></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Java</td>
-                <td>4 years</td>
-                <td class="star">☀ ☀ ☀ ☀ ☀</td>
-            </tr>
-           <tr>
-                <td>SQL</td>
-                <td>4 years</td>
-               <td class="star">☀ ☀ ☀ ☀ ☀</td>
-            </tr>
-                <tr>
-                <td>JPA</td>
-                <td>3.5 years</td>
-                <td class="star">☀ ☀ ☀ ☀</td>
-            </tr>
-            <tr><td>Spring MVC</td>
-                <td>2 years</td>
-                <td class="star">☀ ☀ ☀ ☀ </td>
-            </tr>
-            <tr>
-                <td>Spring Boot</td>
-                <td>1 year</td>
-                <td class="star">☀ ☀ ☀</td>
-            </tr>
-        </tbody>
-        </table>
-    <hr size="3" noshade="">
-    <h3>My hobbies</h3>
-    <ol>
-        <li>Reading</li>
-        <li>Cicling</li>
-        <li>Learning languages</li>
-    </ol>
+<div class="bottom-container">
+   <a class="footer-link" href="https://www.linkedin.com/in/svitlana-hromivchuk/">LinkedIn</a>
+  <a class="footer-link" href="https://www.facebook.com/svitlana.gromivchuk">Facebook</a>
+  <a class="footer-link" href="https://lanasweet.github.io/cv/">Website</a>
+  <p class="p_footer">© 2023 Svit H.</p>
+    <br>
+    <br>
+    <a href="https://www.flaticon.es/iconos-gratis/java" title="java iconos">Java iconos creados por Freepik - Flaticon</a>
 
-</body>
+</div>
+ </body>
 </html>
