--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
     <h2>My Skills.</h2>
     <div class="skill-row">
       <img class="img-skill" src="images/java.png" alt="java">
-      <h3>Lorem & Ipsum</h3>
-      <p class="p_skills">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <h3>Java 8, 11</h3>
+      <p class="p_skills">I have been working using Java for 3 years.</p>
     </div>
     <div class="skill-row">
       <img class="img-skill" src="images/computer.png" alt="java">
-      <h3>Lorem Ipsum Dolor</h3>
-      <p class="p_skills">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <h3>SQL</h3>
+      <p class="p_skills">MySQL, DB2, Oracle, Couchbase</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <h3>Sorry for the incvenience but this site is still under construction</h3>
+    <p>I will update it as soon as possible</p>
     <br>
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
  </div>
